--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "aws-sdk": "^2.1540.0",
     "axios": "^1.5.0",
     "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "ws": "^8.14.2"
